--- a/drop-database/pom.xml
+++ b/drop-database/pom.xml
@@ -1,136 +1,136 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
->
-    <modelVersion>4.0.0</modelVersion>
-    <parent>
-        <groupId>com.chiralbehaviors.CoRE</groupId>
-        <artifactId>CoRE.app</artifactId>
-        <version>2.0.0-SNAPSHOT</version>
-    </parent>
-    <artifactId>drop-database</artifactId>
-    <name>Drop Database</name>
-    <description>Drop the database and attendant users and roles.</description>
-    <dependencies>
-        <dependency>
-            <groupId>org.postgresql</groupId>
-            <artifactId>postgresql</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.chiralbehaviors.CoRE</groupId>
-            <artifactId>schema</artifactId>
-        </dependency>
-    </dependencies>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>com.chiralbehaviors.CoRE</groupId>
+		<artifactId>CoRE.app</artifactId>
+		<version>2.0.0-SNAPSHOT</version>
+	</parent>
+	<artifactId>drop-database</artifactId>
+	<name>Drop Database</name>
+	<description>Drop the database and attendant users and roles.</description>
+	<dependencies>
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.chiralbehaviors.CoRE</groupId>
+			<artifactId>schema</artifactId>
+		</dependency>
+	</dependencies>
 
-    <profiles>
-        <profile>
-            <id>drop-db</id>
-            <activation>
-                <property>
-                    <name>drop</name>
-                </property>
-            </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.liquibase</groupId>
-                        <artifactId>liquibase-maven-plugin</artifactId>
-                        <executions>
-                            <execution>
-                                <phase>process-resources</phase>
-                                <configuration>
-                                    <promptOnNonLocalDatabase>false</promptOnNonLocalDatabase>
-                                    <driver>org.postgresql.Driver</driver>
-                                    <url>jdbc:postgresql://${dba.db.server}:${dba.db.port}/${dba.db.database}</url>
-                                    <username>${dba.db.login}</username>
-                                    <password>${dba.db.password}</password>
-                                    <rollbackTag>initial-database-create-${db.login}</rollbackTag>
-                                    <contexts>${db.context}</contexts>
-                                    <changeLogFile>create-database.xml</changeLogFile>
-                                    <verbose>true</verbose>
-                                    <expressionVars>
-                                        <property>
-                                            <name>create.db.database</name>
-                                            <value>${db.database}</value>
-                                        </property>
-                                        <property>
-                                            <name>create.db.role</name>
-                                            <value>${db.login}</value>
-                                        </property>
-                                        <property>
-                                            <name>create.db.password</name>
-                                            <value>${db.password}</value>
-                                        </property>
-                                    </expressionVars>
-                                </configuration>
-                                <goals>
-                                    <goal>rollback</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <configuration>
-                            <skip>true</skip>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
+	<profiles>
+		<profile>
+			<id>drop-db</id>
+			<activation>
+				<property>
+					<name>drop</name>
+				</property>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.liquibase</groupId>
+						<artifactId>liquibase-maven-plugin</artifactId>
+						<executions>
+							<execution>
+								<phase>process-resources</phase>
+								<configuration>
+									<promptOnNonLocalDatabase>false</promptOnNonLocalDatabase>
+									<driver>org.postgresql.Driver</driver>
+									<url>jdbc:postgresql://${dba.db.server}:${dba.db.port}/${dba.db.database}</url>
+									<username>${dba.db.login}</username>
+									<password>${dba.db.password}</password>
+									<rollbackTag>initial-database-create-${db.login}</rollbackTag>
+									<contexts>${db.context}</contexts>
+									<changeLogFile>create-database.xml</changeLogFile>
+									<verbose>true</verbose>
+									<expressionVars>
+										<property>
+											<name>create.db.database</name>
+											<value>${db.database}</value>
+										</property>
+										<property>
+											<name>create.db.role</name>
+											<value>${db.login}</value>
+										</property>
+										<property>
+											<name>create.db.password</name>
+											<value>${db.password}</value>
+										</property>
+									</expressionVars>
+								</configuration>
+								<goals>
+									<goal>rollback</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-surefire-plugin</artifactId>
+						<configuration>
+							<skip>true</skip>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
 
-        <profile>
-            <id>sudo-drop-me</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.codehaus.mojo</groupId>
-                        <artifactId>sql-maven-plugin</artifactId>
-                        <configuration>
-                            <driver>org.postgresql.Driver</driver>
-                            <url>jdbc:postgresql://${dba.db.server}:${dba.db.port}/${dba.db.database}</url>
-                            <username>${dba.db.login}</username>
-                            <password>${dba.db.password}</password>
-                            <autocommit>true</autocommit>
-                        </configuration>
-                        <dependencies>
-                            <dependency>
-                                <groupId>org.postgresql</groupId>
-                                <artifactId>postgresql</artifactId>
-                                <version>${postgresql.driver.version}</version>
-                            </dependency>
-                        </dependencies>
-                        <executions>
-                            <execution>
-                                <id>drop</id>
-                                <phase>test</phase>
-                                <goals>
-                                    <goal>execute</goal>
-                                </goals>
-                                <configuration>
-                                    <srcFiles>
-                                        <srcFile>${project.build.outputDirectory}/drop-database.sql</srcFile>
-                                    </srcFiles>
-                                </configuration>
-                            </execution>
-                            <execution>
-                                <id>drop_roles</id>
-                                <phase>test</phase>
-                                <goals>
-                                    <goal>execute</goal>
-                                </goals>
-                                <configuration>
-                                    <onError>continue</onError>
-                                    <srcFiles>
-                                        <srcFile>${project.build.outputDirectory}/drop-roles.sql</srcFile>
-                                        <srcFile>${project.build.outputDirectory}/drop-liquibase.sql</srcFile>
-                                    </srcFiles>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-    </profiles>
+		<profile>
+			<id>sudo-drop-me</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.codehaus.mojo</groupId>
+						<artifactId>sql-maven-plugin</artifactId>
+						<configuration>
+							<driver>org.postgresql.Driver</driver>
+							<url>jdbc:postgresql://${dba.db.server}:${dba.db.port}/${dba.db.database}</url>
+							<username>${dba.db.login}</username>
+							<password>${dba.db.password}</password>
+							<autocommit>true</autocommit>
+						</configuration>
+						<dependencies>
+							<dependency>
+								<groupId>org.postgresql</groupId>
+								<artifactId>postgresql</artifactId>
+								<version>${postgresql.driver.version}</version>
+							</dependency>
+						</dependencies>
+						<executions>
+							<execution>
+								<id>drop</id>
+								<phase>test</phase>
+								<goals>
+									<goal>execute</goal>
+								</goals>
+								<configuration>
+									<srcFiles>
+										<srcFile>${project.build.outputDirectory}/drop-database.sql</srcFile>
+									</srcFiles>
+								</configuration>
+							</execution>
+							<execution>
+								<id>drop_roles</id>
+								<phase>test</phase>
+								<goals>
+									<goal>execute</goal>
+								</goals>
+								<configuration>
+									<onError>continue</onError>
+									<srcFiles>
+										<srcFile>${project.build.outputDirectory}/drop-roles.sql</srcFile>
+										<srcFile>${project.build.outputDirectory}/drop-liquibase.sql</srcFile>
+									</srcFiles>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 </project>
