--- a/animations/pom.xml
+++ b/animations/pom.xml
@@ -27,6 +27,12 @@
 			<groupId>com.chiralbehaviors.CoRE</groupId>
 			<artifactId>dsl</artifactId>
 		</dependency>
+        <dependency>
+            <groupId>com.chiralbehaviors</groupId>
+            <artifactId>jbcrypt</artifactId>
+        </dependency>
+        
+        
 		<dependency>
 			<groupId>com.chiralbehaviors.CoRE</groupId>
 			<artifactId>thing-ontology</artifactId>
